cmss/main/default/objects/Asset/fields/CreditFeeSum__c.field-meta.xml
<CustomField>
    <fullName>CreditFeeSum__c</fullName>
    <description>Suma poplatků za úvěr</description>
    <label>Credit Fee Sum</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>