cmss/main/default/objects/Asset/fields/CSOBElectronicBanking__c.field-meta.xml
<CustomField>
    <fullName>CSOBElectronicBanking__c</fullName>
    <label>CSOB Electronic Banking</label>
    <length>3</length>
    <type>Text</type>
</CustomField>