cmss/main/default/objects/Asset/fields/CurrentAccountState__c.field-meta.xml
<CustomField>
    <fullName>CurrentAccountState__c</fullName>
    <label>Current Account State</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>