cmss/main/default/objects/Asset/fields/CurrentBalance__c.field-meta.xml
<CustomField>
    <fullName>CurrentBalance__c</fullName>
    <description>Aktuální zůstatek</description>
    <label>Current Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>