cmss/main/default/objects/Asset/fields/CurrentBlocking__c.field-meta.xml
<CustomField>
    <fullName>CurrentBlocking__c</fullName>
    <label>Current Blocking</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>