cmss/main/default/objects/Asset/fields/CurrentInterestRate__c.field-meta.xml
<CustomField>
    <fullName>CurrentInterestRate__c</fullName>
    <description>Smluvní sazba, tj. úroková sazba, kterou sa úročí jistina úvěru.</description>
    <label>Current Interest Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>