cmss/main/default/objects/Asset/fields/CurrentLawRegime__c.field-meta.xml
<CustomField>
    <fullName>CurrentLawRegime__c</fullName>
    <label>Current Law Regime</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>