cmss/main/default/objects/Asset/fields/CurrentMortgageAccountState__c.field-meta.xml
<CustomField>
    <fullName>CurrentMortgageAccountState__c</fullName>
    <label>Current Mortgage Account State</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>