cmss/main/default/objects/Asset/fields/CurrentPayStatus__c.field-meta.xml
<CustomField>
    <fullName>CurrentPayStatus__c</fullName>
    <description>&quot;Aktuální Stav plateb.
Odpovídá:  Započteno na Stavu plateb minus Předepsáno na Stavu plateb.
Tzn. nedoplatky na Stavu plateb jsou zobrazeny jako záporné číslo, přeplatky na Stavu plateb jako kladné čí&quot;</description>
    <label>Current Pay Status</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>