cmss/main/default/objects/Asset/fields/DateOfPaymentsTransfer__c.field-meta.xml
<CustomField>
    <fullName>DateOfPaymentsTransfer__c</fullName>
    <label>Date Of Payments Transfer</label>
    <type>Date</type>
</CustomField>