cmss/main/default/objects/Asset/fields/DateUpdated__c.field-meta.xml
<CustomField>
    <fullName>DateUpdated__c</fullName>
    <description>Datum aktualizace údaje</description>
    <label>Date Updated</label>
    <type>Date</type>
</CustomField>