cmss/main/default/objects/Asset/fields/DecisionDate__c.field-meta.xml
<CustomField>
    <fullName>DecisionDate__c</fullName>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>