cmss/main/default/objects/Asset/fields/DelayInPaymentMorethanOneYear__c.field-meta.xml
<CustomField>
    <fullName>DelayInPaymentMorethanOneYear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delay In Payment More than One Year</label>
    <type>Checkbox</type>
</CustomField>