cmss/main/default/objects/Asset/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <description>datum dorucenia formulara pre zalozenie zmluvy.</description>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>