cmss/main/default/objects/Asset/fields/DetailReinsuranceType__c.field-meta.xml
<CustomField>
    <fullName>DetailReinsuranceType__c</fullName>
    <description>Doručení řádné žádosti</description>
    <label>Detail Reinsurance Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>