cmss/main/default/objects/Asset/fields/DeterminatedDate__c.field-meta.xml
<CustomField>
    <fullName>DeterminatedDate__c</fullName>
    <description>Rozhodný den. Je to den, který určuje SSOS při uzavření obchodu. V EDM SSOS se tento atribut jmenuje EDM_ROZHODNY_DATUM.</description>
    <label>Determinated Date</label>
    <type>Date</type>
</CustomField>