cmss/main/default/objects/Asset/fields/DisabilityPension__c.field-meta.xml
<CustomField>
    <fullName>DisabilityPension__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Určuje, že se jedná o invalidní penzi</description>
    <label>Disability Pension</label>
    <type>Checkbox</type>
</CustomField>