cmss/main/default/objects/Asset/fields/DocumentationCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentationCompletedDate__c</fullName>
    <label>Documentation Completed Date</label>
    <type>Date</type>
</CustomField>