cmss/main/default/objects/Asset/fields/DocumentPlace__c.field-meta.xml
<CustomField>
    <fullName>DocumentPlace__c</fullName>
    <label>Document Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>