cmss/main/default/objects/Asset/fields/DrawdownTerm__c.field-meta.xml
<CustomField>
    <fullName>DrawdownTerm__c</fullName>
    <description>Termín úplného vyčerpání</description>
    <label>Drawdown Term</label>
    <type>Date</type>
</CustomField>