cmss/main/default/objects/Asset/fields/DrawingRemains__c.field-meta.xml
<CustomField>
    <fullName>DrawingRemains__c</fullName>
    <label>Drawing Remains</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>