cmss/main/default/objects/Asset/fields/DrawnAmount__c.field-meta.xml
<CustomField>
    <fullName>DrawnAmount__c</fullName>
    <description>Celkový objem vyplacených segmentů z  ÚSS ve stavu Vyplaceno (výplaty z účtu SS + výplaty z účtu ÚSS)</description>
    <label>Drawn Amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>