cmss/main/default/objects/Asset/fields/DrawnByClient__c.field-meta.xml
<CustomField>
    <fullName>DrawnByClient__c</fullName>
    <description>Suma všech doposud provedených čerpání MU/USS (snížená o částku čerpání použitého na úhradu poplatku za zpracování MU/USS).</description>
    <label>Drawn By Client</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>