cmss/main/default/objects/Asset/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>Datum ukončení</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>