cmss/main/default/objects/Asset/fields/EmployerContribution__c.field-meta.xml
<CustomField>
    <fullName>EmployerContribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employer Contribution</label>
    <type>Checkbox</type>
</CustomField>