cmss/main/default/objects/Asset/fields/EndOfRetirementPension__c.field-meta.xml
<CustomField>
    <fullName>EndOfRetirementPension__c</fullName>
    <label>End Of Retirement Pension</label>
    <type>Date</type>
</CustomField>