cmss/main/default/objects/Asset/fields/EstatePension__c.field-meta.xml
<CustomField>
    <fullName>EstatePension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estate Pension</label>
    <type>Checkbox</type>
</CustomField>