cmss/main/default/objects/Asset/fields/EvaluationNumber__c.field-meta.xml
<CustomField>
    <fullName>EvaluationNumber__c</fullName>
    <description>Hodnotící číslo - k datu, k počátku roku, k měsíční uzávěrce</description>
    <label>Evaluation Number</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>