cmss/main/default/objects/Asset/fields/ExhaustedAmount__c.field-meta.xml
<CustomField>
    <fullName>ExhaustedAmount__c</fullName>
    <label>Exhausted Amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>