cmss/main/default/objects/Asset/fields/ExpectedCreditEndDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedCreditEndDate__c</fullName>
    <description>Předp. ukončení úvěru</description>
    <label>Expected Credit End Date</label>
    <type>Date</type>
</CustomField>