cmss/main/default/objects/Asset/fields/ExpectedExhaustionDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedExhaustionDate__c</fullName>
    <label>Expected Exhaustion Date</label>
    <type>Date</type>
</CustomField>