cmss/main/default/objects/Asset/fields/FirstDecision__c.field-meta.xml
<CustomField>
    <fullName>FirstDecision__c</fullName>
    <description>Datum 1. rozhodnutí</description>
    <label>First Decision</label>
    <type>Date</type>
</CustomField>