cmss/main/default/objects/Asset/fields/FirstDrawDate__c.field-meta.xml
<CustomField>
    <fullName>FirstDrawDate__c</fullName>
    <description>Datum, kdy bylo poprvé čerpáno</description>
    <label>First Draw Date</label>
    <type>Date</type>
</CustomField>