cmss/main/default/objects/Asset/fields/FirstPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>FirstPaymentAmount__c</fullName>
    <label>First Payment Amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>