cmss/main/default/objects/Asset/fields/FirstPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>FirstPaymentDate__c</fullName>
    <label>First Payment Date</label>
    <type>Date</type>
</CustomField>