cmss/main/default/objects/Asset/fields/FirstPaymentDateAfterLastDraw__c.field-meta.xml
<CustomField>
    <fullName>FirstPaymentDateAfterLastDraw__c</fullName>
    <label>First Payment Date After Last Draw</label>
    <type>Date</type>
</CustomField>