cmss/main/default/objects/Asset/fields/FixationLength__c.field-meta.xml
<CustomField>
    <fullName>FixationLength__c</fullName>
    <label>Fixation Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>