cmss/main/default/objects/Asset/fields/FixationPeriodMonthLength__c.field-meta.xml
<CustomField>
    <fullName>FixationPeriodMonthLength__c</fullName>
    <description>Délka fix. Období - měsíce</description>
    <label>Fixation Period Month Length</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>