cmss/main/default/objects/Asset/fields/FlipEstimate__c.field-meta.xml
<CustomField>
    <fullName>FlipEstimate__c</fullName>
    <description>Předpokládané datum překlopení MU na USS (předpokládané datum přidělení CČ), plněno jen u MU. – viz FS EKO, kap. XVIII.</description>
    <label>Flip Estimate</label>
    <type>Date</type>
</CustomField>