cmss/main/default/objects/Asset/fields/FormPayment__c.field-meta.xml
<CustomField>
    <fullName>FormPayment__c</fullName>
    <label>Form Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>