cmss/main/default/objects/Asset/fields/FreeAccount__c.field-meta.xml
<CustomField>
    <fullName>FreeAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indikátor účtu zdarma</description>
    <label>Free Account</label>
    <type>Checkbox</type>
</CustomField>