cmss/main/default/objects/Asset/fields/GeneralInsuranceConditions__c.field-meta.xml
<CustomField>
    <fullName>GeneralInsuranceConditions__c</fullName>
    <label>General Insurance Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>117</fullName>
            </value>
            <value>
                <fullName>113</fullName>
            </value>
            <value>
                <fullName>518</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>506</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>