cmss/main/default/objects/Asset/fields/HasAccountCsob__c.field-meta.xml
<CustomField>
    <fullName>HasAccountCsob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Account CSOB</label>
    <type>Checkbox</type>
</CustomField>