cmss/main/default/objects/Asset/fields/HasAccountPsb__c.field-meta.xml
<CustomField>
    <fullName>HasAccountPsb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Account PSB</label>
    <type>Checkbox</type>
</CustomField>