cmss/main/default/objects/Asset/fields/HasCsobInsurance__c.field-meta.xml
<CustomField>
    <fullName>HasCsobInsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has CSOB Insurance</label>
    <type>Checkbox</type>
</CustomField>