cmss/main/default/objects/Asset/fields/HasEstateInsurance__c.field-meta.xml
<CustomField>
    <fullName>HasEstateInsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Estate Insurance</label>
    <type>Checkbox</type>
</CustomField>