cmss/main/default/objects/Asset/fields/HasGroupInsurance__c.field-meta.xml
<CustomField>
    <fullName>HasGroupInsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Group Insurance</label>
    <type>Checkbox</type>
</CustomField>