cmss/main/default/objects/Asset/fields/HasHouseholdInsurance__c.field-meta.xml
<CustomField>
    <fullName>HasHouseholdInsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Household Insurance</label>
    <type>Checkbox</type>
</CustomField>