cmss/main/default/objects/Asset/fields/HasLoanCaseRelatedAsset__c.field-meta.xml
<CustomField>
    <fullName>HasLoanCaseRelatedAsset__c</fullName>
    <formula>NumberofLoanCaseRelatedAssets__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Loan Case Related Asset</label>
    <type>Checkbox</type>
</CustomField>