cmss/main/default/objects/Asset/fields/HasMortgageInsurance__c.field-meta.xml
<CustomField>
    <fullName>HasMortgageInsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Mortgage Insurance</label>
    <type>Checkbox</type>
</CustomField>