cmss/main/default/objects/Asset/fields/HasMURelatedAsset__c.field-meta.xml
<CustomField>
    <fullName>HasMURelatedAsset__c</fullName>
    <label>Has MU Related Asset</label>
    <summaryFilterItems>
        <field>AssetRelationship.ProductTypeRelatedAsset__c</field>
        <operation>equals</operation>
        <value>1, 2</value>
    </summaryFilterItems>
    <summaryForeignKey>AssetRelationship.AssetId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>