cmss/main/default/objects/Asset/fields/HasRLIRelatedAsset__c.field-meta.xml
<CustomField>
    <fullName>HasRLIRelatedAsset__c</fullName>
    <description>Má RŽP na smlouvě</description>
    <label>Has RLI Related Asset</label>
    <summaryFilterItems>
        <field>AssetRelationship.ProductTypeRelatedAsset__c</field>
        <operation>equals</operation>
        <value>7</value>
    </summaryFilterItems>
    <summaryForeignKey>AssetRelationship.AssetId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>