cmss/main/default/objects/Asset/fields/HeadquarterDate__c.field-meta.xml
<CustomField>
    <fullName>HeadquarterDate__c</fullName>
    <label>Headquarter Date</label>
    <type>Date</type>
</CustomField>