cmss/main/default/objects/Asset/fields/InsuranceBankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>InsuranceBankAccountNumber__c</fullName>
    <description>Číslo účtu/kód banky PMO</description>
    <label>Insurance Bank Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>