cmss/main/default/objects/Asset/fields/InsuranceEndDate__c.field-meta.xml
<CustomField>
    <fullName>InsuranceEndDate__c</fullName>
    <description>Datum ukončení</description>
    <label>Insurance End Date</label>
    <type>Date</type>
</CustomField>