cmss/main/default/objects/Asset/fields/InsurancePeriodPreviousPP__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriodPreviousPP__c</fullName>
    <label>Insurance Period Previous PP</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>