cmss/main/default/objects/Asset/fields/InsurancePeriodRetirementPension__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriodRetirementPension__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Insurance Period Retirement Pension</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>