cmss/main/default/objects/Asset/fields/InsuranceStartDate__c.field-meta.xml
<CustomField>
    <fullName>InsuranceStartDate__c</fullName>
    <description>Datum počátku pojištění</description>
    <label>Insurance Start Date</label>
    <type>Date</type>
</CustomField>