cmss/main/default/objects/Asset/fields/InsuranceStatus__c.field-meta.xml
<CustomField>
    <fullName>InsuranceStatus__c</fullName>
    <label>Insurance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>81</fullName>
            </value>
            <value>
                <fullName>82</fullName>
            </value>
            <value>
                <fullName>83</fullName>
            </value>
            <value>
                <fullName>84</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>