cmss/main/default/objects/Asset/fields/InsuranceType__c.field-meta.xml
<CustomField>
    <fullName>InsuranceType__c</fullName>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>