cmss/main/default/objects/Asset/fields/InterestPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>InterestPaymentAmount__c</fullName>
    <label>Interest Payment Amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>