cmss/main/default/objects/Asset/fields/InterestRate__c.field-meta.xml
<CustomField>
    <fullName>InterestRate__c</fullName>
    <description>Aktuální úroková sazba</description>
    <label>Interest Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>