cmss/main/default/objects/Asset/fields/InterestRateValidTo__c.field-meta.xml
<CustomField>
    <fullName>InterestRateValidTo__c</fullName>
    <label>Interest Rate Valid To</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>