cmss/main/default/objects/Asset/fields/Is_credit_product__c.field-meta.xml
<CustomField>
    <fullName>Is_credit_product__c</fullName>
    <description>PCF pomocné pole</description>
    <formula>IF( ISPICKVAL(ProductType__c, &quot;0&quot;) , &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <label>Is credit product</label>
    <type>Text</type>
</CustomField>