cmss/main/default/objects/Asset/fields/IsDrawingCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsDrawingCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drawing Completed Date</label>
    <type>Checkbox</type>
</CustomField>