cmss/main/default/objects/Asset/fields/IsInherited__c.field-meta.xml
<CustomField>
    <fullName>IsInherited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Příznak, zda byla smlouva zděděna</description>
    <label>Is Inherited</label>
    <type>Checkbox</type>
</CustomField>