cmss/main/default/objects/Asset/fields/IsSubvene__c.field-meta.xml
<CustomField>
    <fullName>IsSubvene__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Příznak, zda je smlouva se státní podporou - (0  - Ne, 1 - Ano)</description>
    <label>Is Subvene</label>
    <type>Checkbox</type>
</CustomField>