cmss/main/default/objects/Asset/fields/LastActivityEndDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivityEndDate__c</fullName>
    <description>Poslední datum konce aktivního využívání BÚ</description>
    <label>Last Activity End Date</label>
    <type>Date</type>
</CustomField>