cmss/main/default/objects/Asset/fields/LastActivityStartDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivityStartDate__c</fullName>
    <description>Poslední datum začátku aktivního využívání BÚ</description>
    <label>Last Activity Start Date</label>
    <type>Date</type>
</CustomField>