cmss/main/default/objects/Asset/fields/LastChangeDate__c.field-meta.xml
<CustomField>
    <fullName>LastChangeDate__c</fullName>
    <description>Datum, kdy byla na smlouvě provedena poslední změna</description>
    <label>Last Change Date</label>
    <type>Date</type>
</CustomField>