cmss/main/default/objects/Asset/fields/LastDrawdownReminder__c.field-meta.xml
<CustomField>
    <fullName>LastDrawdownReminder__c</fullName>
    <description>Datum poslední upomínky dočerpání</description>
    <label>Last Drawdown Reminder</label>
    <type>Date</type>
</CustomField>