cmss/main/default/objects/Asset/fields/LastDrawingAmount__c.field-meta.xml
<CustomField>
    <fullName>LastDrawingAmount__c</fullName>
    <label>Last Drawing Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>