cmss/main/default/objects/Asset/fields/LastDrawingDate__c.field-meta.xml
<CustomField>
    <fullName>LastDrawingDate__c</fullName>
    <label>Last Drawing Date</label>
    <type>Date</type>
</CustomField>