cmss/main/default/objects/Asset/fields/LastInteractionDate__c.field-meta.xml
<CustomField>
    <fullName>LastInteractionDate__c</fullName>
    <description>Datum poslední interakce</description>
    <formula>Account.LastInteractionDate__c</formula>
    <label>Last Interaction Date</label>
    <type>Date</type>
</CustomField>