cmss/main/default/objects/Asset/fields/LastReminder__c.field-meta.xml
<CustomField>
    <fullName>LastReminder__c</fullName>
    <description>Datum poslední upomínky rozčerpání</description>
    <label>Last Reminder</label>
    <type>Date</type>
</CustomField>