cmss/main/default/objects/Asset/fields/LeftToAdd__c.field-meta.xml
<CustomField>
    <fullName>LeftToAdd__c</fullName>
    <description>Zbývá doložit</description>
    <label>Left To Add</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>