cmss/main/default/objects/Asset/fields/LifeCycleState__c.field-meta.xml
<CustomField>
    <fullName>LifeCycleState__c</fullName>
    <label>Life Cycle State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>