cmss/main/default/objects/Asset/fields/LiskaPlus__c.field-meta.xml
<CustomField>
    <fullName>LiskaPlus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liska Plus</label>
    <type>Checkbox</type>
</CustomField>