cmss/main/default/objects/Asset/fields/LoanAmount__c.field-meta.xml
<CustomField>
    <fullName>LoanAmount__c</fullName>
    <description>Smluvní výše úvěru. Výše úvěru MU/USS stanovená v rámci rozhodnutí o UP. V případě USS je hodnota pola definitivně stanovena při prvním čerpání úvěru.</description>
    <label>Loan Amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>