cmss/main/default/objects/Asset/fields/MaturityOverdue__c.field-meta.xml
<CustomField>
    <fullName>MaturityOverdue__c</fullName>
    <label>Maturity Overdue</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>