cmss/main/default/objects/Asset/fields/MaxInsuranceAmount__c.field-meta.xml
<CustomField>
    <fullName>MaxInsuranceAmount__c</fullName>
    <description>Maximální pojistná částka, kterou lze sjednat</description>
    <label>Max Insurance Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>