cmss/main/default/objects/Asset/fields/MaxPaidBase__c.field-meta.xml
<CustomField>
    <fullName>MaxPaidBase__c</fullName>
    <label>Max Paid Base</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>