cmss/main/default/objects/Asset/fields/MetForCommission0__c.field-meta.xml
<CustomField>
    <fullName>MetForCommission0__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Met For Commission 0</label>
    <type>Checkbox</type>
</CustomField>