cmss/main/default/objects/Asset/fields/MetForCommission1__c.field-meta.xml
<CustomField>
    <fullName>MetForCommission1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Met For Commission 1</label>
    <type>Checkbox</type>
</CustomField>