cmss/main/default/objects/Asset/fields/MetForCommission2__c.field-meta.xml
<CustomField>
    <fullName>MetForCommission2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Met For Commission 2</label>
    <type>Checkbox</type>
</CustomField>