cmss/main/default/objects/Asset/fields/MigrationDate__c.field-meta.xml
<CustomField>
    <fullName>MigrationDate__c</fullName>
    <label>Migration Date</label>
    <type>Date</type>
</CustomField>