cmss/main/default/objects/Asset/fields/MonthFeeThirdPerson__c.field-meta.xml
<CustomField>
    <fullName>MonthFeeThirdPerson__c</fullName>
    <label>Month Fee Third Person</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>