cmss/main/default/objects/Asset/fields/MonthFeeTotal__c.field-meta.xml
<CustomField>
    <fullName>MonthFeeTotal__c</fullName>
    <label>Month Fee Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>