cmss/main/default/objects/Asset/fields/MonthlyDeposit__c.field-meta.xml
<CustomField>
    <fullName>MonthlyDeposit__c</fullName>
    <description>&quot;Pro aktuální měsíc platný měsíční vklad, tj. částka, kterou se klient zavázal naspořit.
Pro tzv. čisté SS se jedná o částku měsíčního spoření (neplnění ČSOB St. spoř. toleruje, jakkoli lze příležitostně upomínat).
Pro SS se souvisejícím MÚ se jedná o tzv. dospořování, tj. výrazně silnější závazek (klient se k němu zavazuje v úvěrové smlouvě).&quot;</description>
    <label>Monthly Deposit</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>