cmss/main/default/objects/Asset/fields/MonthlyLoad__c.field-meta.xml
<CustomField>
    <fullName>MonthlyLoad__c</fullName>
    <label>Monthly Load</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>