cmss/main/default/objects/Asset/fields/MonthlyPayment__c.field-meta.xml
<CustomField>
    <fullName>MonthlyPayment__c</fullName>
    <description>Měsíční zatížení</description>
    <label>Monthly Payment</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>