cmss/main/default/objects/Asset/fields/MortgageLength__c.field-meta.xml
<CustomField>
    <fullName>MortgageLength__c</fullName>
    <label>Mortgage Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>