cmss/main/default/objects/Asset/fields/MortgageOrigin__c.field-meta.xml
<CustomField>
    <fullName>MortgageOrigin__c</fullName>
    <label>Mortgage Origin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>