cmss/main/default/objects/Asset/fields/MortgagePurpose__c.field-meta.xml
<CustomField>
    <fullName>MortgagePurpose__c</fullName>
    <label>Mortgage Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>