cmss/main/default/objects/Asset/fields/MortgageStatus__c.field-meta.xml
<CustomField>
    <fullName>MortgageStatus__c</fullName>
    <label>Mortgage Status</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>