cmss/main/default/objects/Asset/fields/NearestReFixationDate__c.field-meta.xml
<CustomField>
    <fullName>NearestReFixationDate__c</fullName>
    <description>Nejbližší datum refixace</description>
    <label>Nearest Re Fixation Date</label>
    <type>Date</type>
</CustomField>